# waypoint_gui

./: LICENSE  README.md
waypoint_gui/: CMakeLists.txt  package.xml  plugin_description.xml
waypoint_gui/config/: waypoint_gui.yaml
waypoint_gui/launch/: waypoint_gui.launch
waypoint_gui/rviz/: waypoint_gui_move_base.rviz  waypoint_gui_neonavigation.rviz
waypoint_gui/saved_waypoints/: waypoints.csv
waypoint_gui/scripts/: follow_waypoints.py  marker_publisher.py
waypoint_gui/src/: waypoint_gui.cpp  waypoint_gui.h
waypoint_neonavigation/: CMakeLists.txt  package.xml
waypoint_neonavigation/launch/: simulate_path.launch
waypoint_neonavigation/launch/include/: neonavigation.launch
waypoint_neonavigation/maps/: 3f_all.yaml
