<?xml version="1.0"?>
<package format="2">
  <name>waypoint_gui</name>
  <version>0.0.0</version>
  <description>The waypoint_gui package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>libqt5-core</depend>
  <depend>rviz</depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
