<?xml version="1.0"?>
<package format="2">
  <name>waypoint_neonavigation</name>
  <version>0.0.0</version>
  <description>The waypoints_navigation package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <depend>map_server</depend>
  <depend>neonavigation</depend>
  <depend>move_base_msgs</depend>

</package>
